--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-input/mask": "^2.0.4",
     "dompurify": "^3.2.6",
     "jsdom": "^26.1.0",
     "next": "15.3.4",
