--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-input/mask": "^2.0.4",
+    "@hookform/resolvers": "^5.1.1",
+    "classnames": "^2.5.1",
     "dompurify": "^3.2.6",
+    "imask": "^7.6.1",
     "jsdom": "^26.1.0",
     "next": "15.3.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.58.1",
+    "react-imask": "^7.6.1",
+    "zod": "^3.25.67",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
